--- a/dashboard.html
+++ b/dashboard.html
@@ -4,9 +4,10 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Dashboard – RewardShareIo</title>
+  <title>Dashboard ï¿½ RewardShareIo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     .balance-grid {
       display: grid;
@@ -227,7 +228,7 @@
 
 <!-- FOOTER -->
 <div class="footer">
-  © 2025 RewardShareIo · <small style="color: var(--gray);">Saldo: <span id="footerBalance">Rp0</span></small>
+  ï¿½ 2025 RewardShareIo ï¿½ <small style="color: var(--gray);">Saldo: <span id="footerBalance">Rp0</span></small>
 </div>
 
 <!-- MODAL REFERRAL -->
