--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
   <!-- CSS GLOBAL -->
   <link rel="stylesheet" href="style.css">
+  <!-- Font Awesome (icons) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 
@@ -16,7 +18,7 @@
 
   <!-- ICON ADMIN KECIL -->
   <a href="login-admin.html" title="Admin Panel" style="font-size:14px;color:#9aa0a6;text-decoration:none;">
-    ⚙️
+    <i class="fa-solid fa-gear" aria-hidden="true" style="font-size:1rem"></i>
   </a>
 </div>
   <div class="rd">
