--- a/tasks.html
+++ b/tasks.html
@@ -7,6 +7,7 @@
   <title>Task Tersedia – RewardShareIo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     .task-filter {
       background: var(--bg-card);
